fix(menu): set z-index on `Menu` positioner

--- a/src/components/menu.module.css
+++ b/src/components/menu.module.css
@@ -1,5 +1,6 @@
 .positioner {
   outline: 0;
+  z-index: 999;
 }
 
 .popup {
